@@ -3,6 +3,8 @@ What's New in IDLE 2.6a1?
 
 *Release date: XX-XXX-2008*
 
+- There was an error on exit if no sys.exitfunc was defined. Issue 1647.
+
 - Could not open files in .idlerc directory if latter was hidden on Windows.
   Issue 1743, Issue 1862.
 
